added reset button

--- a/main.css
+++ b/main.css
@@ -5,12 +5,20 @@
 }
 body{
     font-family:monospace;
-    height: 90vh;
+    height: 96vh;
     display:flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background:#363945;
+}
+button{
+    width:70px;
+    height:30px;
+    font-size: 19px;
+    font-family: monospace;
+    background: rgb(221, 218, 206);
+    cursor: pointer;
 }
 section{
     display: grid;
